--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-spring.datasource.url =jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= postgres
 spring.datasource.password= Conceptum@12a
 
-spring.jpa.hibernate.ddl-auto=update
+server.port = 8081
+spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
 jwt.secret =blobalganksecretauthentication
+
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
